added feature: keycloak

--- a/cmd/server/.env
+++ b/cmd/server/.env
@@ -3,3 +3,4 @@ GOOSE_DBSTRING=postgres://postgres:pass2word@localhost:5432/wongnok?sslmode=disa
 GOOSE_MIGRATION_DIR=./migrations
 GOOSE_TABLE=goose_migrations
 DATABASE_URL=postgres://postgres:pass2word@localhost:5432/wongnok?sslmode=disable
+KEYCLOAK_CLIENT_SECRET=R6UCkSremn7nOYkNzqxJVUcVNPnG5fu7
